# harn

./: AGENTS.md  AGENTS.md.harn-backup  Cargo.toml  README.md
.claude/: settings.json
src/: config.rs  diff.rs  display.rs  main.rs  scope.rs
src/analysis/: mod.rs  prompt_features.rs  stage1.rs  stage2.rs  system_prompt.rs
src/capture/: backfill.rs  commit.rs  compact.rs  mod.rs  prompt.rs  session_end.rs  stop.rs  subagent.rs  task.rs  thrashing.rs  tool.rs
src/commands/: analyze.rs  backfill.rs  config.rs  generate.rs  hook.rs  init.rs  mod.rs  status.rs
src/db/: mod.rs  queries.rs  schema.rs
tests/fixtures/: sample_session.jsonl
